# experiments

./: .gitignore  care  go.mod  go.sum
.devcontainer/: care
appdash_examples/: Makefile
astyle_scripts/: astylerc
automated-testing/: Makefile  go.mod  go.sum  test_report.html
closure/: closure1.go  closure1.s  closure2.go  closure2.s
code-editing-agent-deepseek/: go.mod  go.sum  main.go  secret-file.txt
concurrency-costs/: main_test.go
container-heap-v2/: go.mod  go.sum  heap_v2_1.go  heap_v2_2.go  old_intheap.go
database-access/: schema.dbml  schema.sql
database-singleton/: Makefile  go.mod  go.sum
depdemo/: Gopkg.toml  main.go
diff-test-cover/: caculator.go  caculator_test.go  go.mod
ds/: README
emptyinterface2any/: any.go  go.mod  main.go
func_trace/: Makefile  example.c  func_trace.c
go-and-tls13/: client.go  client_tls12.go  server.crt  server.go  server.key  server_config_ciphersuite.go  server_tls12.go
go-cache-strategy/: go.mod  go.sum  main.go
go-ceph/: conn.go  image.go  pool.go
go-compilation/: main-with-call-myclib-static.go  main-with-call-myclib.go  main-with-crypto.go  main-with-expvar.go  main-with-net.go  main-with-os-user.go
go-debug-profile-optimization/: README.md
rust-guide-for-gopher/managing-deps/hello_world/: Cargo.toml
rust-guide-for-gopher/managing-deps/hello_world/src/: main.rs
rust-guide-for-gopher/organizing-rust-code/cargo/single-package/hybrid-crates/my_project/: Cargo.toml
rust-guide-for-gopher/organizing-rust-code/cargo/single-package/hybrid-crates/my_project/src/: lib.rs  main1.rs  main2.rs
(+1831 files in other folders)
