[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = { features = ["derive", "serde_derive"], path = "../serde/serde" }
#serde = { git = "https://github.com/serde-rs/serde.git", features = ["derive", "serde_derive"] }
serde = { version = "1.0.202", features = ["derive", "serde_derive"]}

serde_json = "1.0.117"
